map-fill: map fills

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,6 @@
 		<link rel="stylesheet" href="Case/assets/css/custom.css"> </head>
 
 	<body id="body" data-spy="scroll" data-target=".one-page-header" class="demo-lightbox-gallery lawyer-style">
-		<br></br>
 		<main class="wrapper">
 			<!-- Header -->
 			<nav class="one-page-header navbar navbar-default navbar-fixed-top one-page-nav-scrolling one-page-nav__fixed"
@@ -437,13 +436,7 @@
 								</div>
 								<div class="row">
 									<div class="col-md-8 col-md-offset-2">
-										<p> There's that thance dothe of gruntry from whose this retural country from
-											whips againsolence to sleep: perchance dothe rub; fortune, or will, and
-											lover'd country from who would fard the spurns of discover'd consummatienter
-											what fly take arrows of? Thus pause. To dread of that sleep of somenter
-											in thousand scove, that fly to sleep of that undisprises coil, and that
-											pith may coment man's thus the might, and end make what pith the might,
-											and that is and than fly to be, the pation devoutraveller a wear </p>
+										<p> Lorem Ipsum </p>
 									</div>
 								</div>
 								<div class="row">
@@ -749,7 +742,7 @@
 									</ul>
 								</div>
 							</div>
-							<div class="col-sm-6">
+							<div class="col-sm-6 equal-height-column">
 								<div id="map" class="contact-section-map"></div>
 							</div>
 						</div>
@@ -758,37 +751,37 @@
 			</footer>
 		</main>
 		<!-- JS Global Compulsory -->
-		<script src="assets/plugins/jquery/jquery.min.js"></script>
-		<script src="assets/plugins/jquery/jquery-migrate.min.js"></script>
-		<script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+		<script src="assets/plugins/jquery/jquery.min.js "></script>
+		<script src="assets/plugins/jquery/jquery-migrate.min.js "></script>
+		<script src="assets/plugins/bootstrap/js/bootstrap.min.js "></script>
 		<!-- JS Implementing Plugins -->
-		<script src="assets/plugins/smoothScroll.js"></script>
-		<script src="assets/plugins/jquery.easing.min.js"></script>
-		<script src="assets/plugins/owl-carousel2/owl.carousel.min.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAf66JJmp2VOldGTrVNOmMumlB5U6sVBSI&callback=initMap"
+		<script src="assets/plugins/smoothScroll.js "></script>
+		<script src="assets/plugins/jquery.easing.min.js "></script>
+		<script src="assets/plugins/owl-carousel2/owl.carousel.min.js "></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAf66JJmp2VOldGTrVNOmMumlB5U6sVBSI&callback=initMap "
 		  async defer></script>
-		<script src="Case/assets/js/plugins/gmaps-ini.js"></script>
-		<script src="assets/plugins/master-slider/masterslider/masterslider.min.js"></script>
-		<script src="assets/plugins/revolution-slider/revolution/js/jquery.themepunch.tools.min.js"></script>
-		<script src="assets/plugins/revolution-slider/revolution/js/jquery.themepunch.revolution.min.js"></script>
+		<script src="Case/assets/js/plugins/gmaps-ini.js "></script>
+		<script src="assets/plugins/master-slider/masterslider/masterslider.min.js "></script>
+		<script src="assets/plugins/revolution-slider/revolution/js/jquery.themepunch.tools.min.js "></script>
+		<script src="assets/plugins/revolution-slider/revolution/js/jquery.themepunch.revolution.min.js "></script>
 		<!-- Charts.js -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js"></script>
-		<script src="Case/assets/js/plugins/charts.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js "></script>
+		<script src="Case/assets/js/plugins/charts.js "></script>
 		<!-- SLIDER REVOLUTION 5.0 EXTENSIONS (Load Extensions only on Local File Systems! The following part can be removed on Server for On Demand Loading) -->
-		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.actions.min.js"></script>
-		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.carousel.min.js"></script>
-		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
-		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
-		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.migration.min.js"></script>
-		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
-		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
-		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
-		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.video.min.js"></script>
+		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.actions.min.js "></script>
+		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.carousel.min.js "></script>
+		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.kenburn.min.js "></script>
+		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.layeranimation.min.js "></script>
+		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.migration.min.js "></script>
+		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.navigation.min.js "></script>
+		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.parallax.min.js "></script>
+		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.slideanims.min.js "></script>
+		<script src="assets/plugins/revolution-slider/revolution/js/extensions/revolution.extension.video.min.js "></script>
 		<!-- JS Page Level-->
-		<script src="assets/js/one.app.js"></script>
-		<script src="Case/assets/js/plugins/owl-carousel2.js"></script>
-		<script src="Case/assets/js/plugins/promo.js"></script>
-		<script src="Case/assets/js/plugins/testimonials.js"></script>
+		<script src="assets/js/one.app.js "></script>
+		<script src="Case/assets/js/plugins/owl-carousel2.js "></script>
+		<script src="Case/assets/js/plugins/promo.js "></script>
+		<script src="Case/assets/js/plugins/testimonials.js "></script>
 		<script>
 			$(function() {
 				App.init();
@@ -815,7 +808,7 @@
 
 		</script>
 		<!--[if lt IE 10]>
-		<script src="assets/plugins/sky-forms-pro/skyforms/js/jquery.placeholder.min.js"></script>
+		<script src="assets/plugins/sky-forms-pro/skyforms/js/jquery.placeholder.min.js "></script>
 		<![endif]-->
 	</body>
 
