comment intern tab

--- a/src/index.html
+++ b/src/index.html
@@ -302,7 +302,7 @@
 							<li><a data-toggle="tab" href="#system-integrator">System Integrator</a></li>
 							<li><a data-toggle="tab" href="#developer">Developer</a></li>
 							<li><a data-toggle="tab" href="#system-admin">System Administrator</a></li>
-							<li><a data-toggle="tab" href="#internship">Internship</a></li>
+							<!--li><a data-toggle="tab" href="#internship">Internship</a></li-->
 						</ul>
 						<div class="tab-content">
 							<div id="project-manager" class="tab-pane fade in active">
@@ -429,7 +429,7 @@
 									</div>
 								</div>
 							</div>
-							<div id="internship" class="tab-pane fade">
+							<!--div id="internship" class="tab-pane fade">
 								<div class="row">
 									<div class="col-md-8 col-md-offset-2">
 										<h3 class="text-uppercase"><strong>Internship</strong></h3> </div>
@@ -446,7 +446,7 @@
 											</button>
 									</div>
 								</div>
-							</div>
+							</div-->
 						</div>
 					</div>
 				</div>
