--- a/Scrubbed_Unity/index.html
+++ b/Scrubbed_Unity/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
+<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
+<!--[if !IE]><!-->
 <html lang="en">
+  <!--<![endif]-->
 
   <head>
     <!-- Title -->
-    <title>Lawyer | Unify - Responsive Website Template</title>
-
+    <title>Case Consulting | Consult with Case</title>
     <!-- Required Meta Tags Always Come First -->
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-
+    <meta name="description" content="Computer Consulting Services">
+    <meta name="author" content="Andrew Cooper, Sam Peake, Joe Thompson">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../../favicon.ico">
+    <link rel="shortcut icon" href="./assets/custom/assets-case/img/navLogo.png">
 
     <!-- Google Fonts -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans%3A300%2C400%2C600%2C700%2C800%7CPlayfair+Display%7CRoboto%7CRaleway%7CSpectral%7CRubik">
@@ -49,8 +52,8 @@
           <nav class="navbar navbar-expand-lg g-py-0">
             <div class="container g-pos-rel">
               <!-- Logo -->
-              <a href="#!" class="js-go-to navbar-brand u-header__logo" data-type="static">
-                <img class="u-header__logo-img u-header__logo-img--main g-width-110" src="assets/img/logo.png" alt="Image description">
+              <a href="#body" class="js-go-to navbar-brand u-header__logo" data-type="static">
+                <img class="u-header__logo-img u-header__logo-img--main g-width-110" src="./assets/custom/assets-case/img/logo-banner.gif" alt="Case Consulting">
               </a>
               <!-- End Logo -->
 
@@ -61,31 +64,31 @@
                     <a href="#about" class="nav-link p-0">About</a>
                   </li>
                   <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
-                    <a href="#services" class="nav-link p-0">Services</a>
+                    <a href="#services" class="nav-link p-0">Benefits</a>
                   </li>
                   <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
-                    <a href="#whyWe" class="nav-link p-0">Why we</a>
+                    <a href="#whyWe" class="nav-link p-0">Careers</a>
                   </li>
                   <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
-                    <a href="#benefits" class="nav-link p-0">Benefits</a>
+                    <a href="#benefits" class="nav-link p-0">Numbers</a>
                   </li>
                   <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
-                    <a href="#ourCases" class="nav-link p-0">Our cases</a>
+                    <a href="#ourCases" class="nav-link p-0">Awards</a>
                   </li>
                   <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
-                    <a href="#team" class="nav-link p-0">Team</a>
+                    <a href="#team" class="nav-link p-0">Events</a>
                   </li>
                   <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
-                    <a href="#testimonials" class="nav-link p-0">Testimonials</a>
-                  </li>
-                  <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
-                    <a href="#blog" class="nav-link p-0">Blog</a>
-                  </li>
-                  <li class="nav-item g-ml-15--lg">
-                    <a href="#contact" class="nav-link p-0">Contact</a>
+                    <a href="#testimonials" class="nav-link p-0">Contact</a>
                   </li>
                 </ul>
+
+                <a class="navbar-brand u-header__log">
+                  <img src="./assets/custom/assets-case/img/code-bro.jpg" alt="Best places to work 2018 logo" style="height: 25px">
+                </a>
               </div>
+
+
               <!-- End Navigation -->
 
               <!-- Responsive Toggle Button -->
@@ -116,9 +119,9 @@
               data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"
               data-thumb="assets/img-temp/promo/img1.jpg" data-rotate="0" data-saveperformance="off"
               data-title="Intro">
-              <img src="assets/img-temp/1600x1066/img1.jpg" alt="Image description" data-bgposition="50% 10%"
-                data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg"
-                data-no-retina>
+              <img src="./assets/custom/assets-case/img/developer-min.jpg" alt="Image description"
+                data-bgposition="50% 10%" data-bgfit="cover" data-bgrepeat="no-repeat"
+                data-bgparallax="10" class="rev-slidebg" data-no-retina>
 
               <!-- LAYERS -->
               <!-- LAYER NR. 1 -->
@@ -141,8 +144,8 @@
                 data-transform_in="z:0;rX:0deg;rY:0;rZ:0;sX:1.5;sY:1.5;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;"
                 data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
                 data-mask_in="x:0px;y:0px;" data-mask_out="x:inherit;y:inherit;" data-start="1000"
-                data-splitin="none" data-splitout="none" data-responsive_offset="on">The Law
-                <br> Must Work
+                data-splitin="none" data-splitout="none" data-responsive_offset="on">Software Oriented.
+                <br> Customer Focused.
               </div>
 
               <!-- LAYER NR. 4 -->
@@ -154,9 +157,7 @@
                 data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:1500;e:Power4.easeInOut;"
                 data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
                 data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
-                data-start="1000" data-splitin="none" data-splitout="none" data-responsive_offset="on">Donec erat urna, tincidunt at leo non, blandit finibus ante.
-                <br> Nunc venenatis risus in finibus dapibus. Ut ac massa sodales,
-                <br> mattis enim id, efficitur tortor. Nullam
+                data-start="1000" data-splitin="none" data-splitout="none" data-responsive_offset="on">
               </div>
 
               <!-- LAYER NR. 5 -->
@@ -196,12 +197,12 @@
                 </div>
 
                 <div class="order-1 w-100 u-ns-bg-v1-bottom g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md">
-                  <h3 class="text-uppercase g-line-height-1_1 g-font-weight-800 g-font-size-25 g-font-size-30--md g-mb-20">We know our job</h3>
-                  <p class="mb-0">Sed feugiat porttitor nunc, non dignissim ipsum vestibulum in.
-                    Donec in blandit dolor. Vivamus a fringilla lorem, vel faucibus
-                    ante. Nunc ullamcorper, justo a iaculis elementum, enim orci
-                    viverra eros, fringilla porttitor lorem eros vel odio. In rutrum
-                    tellus vitae blandit lacinia.</p>
+                  <h3 class="text-uppercase g-line-height-1_1 g-font-weight-800 g-font-size-25 g-font-size-30--md g-mb-20"><strong>Work that Matters</strong></h3>
+                  <p class="mb-0">Case Consulting is a software services company that supports the
+                    mission critical requirements of the federal government and private
+                    industry by providing highly talented and exceptionally skilled
+                    software developers, architects, software testers, and program
+                    managers. </p>
                 </div>
               </article>
               <!-- End Article -->
@@ -246,7 +247,7 @@
           <!-- End Info Blocks -->
         </div>
       </section>
-
+      </div>
       <!-- Section Content -->
       <section id="services" class="g-py-100">
         <div class="container text-center g-max-width-750 g-mb-70">
@@ -362,7 +363,8 @@
 
               <p class="g-color-gray-light-v4 g-mb-50">Sed feugiat porttitor nunc, non dignissim ipsum vestibulum in. Donec
                 in blandit dolor. Vivamus a fringilla lorem, vel faucibus ante. Nunc
-                ullamcorper, justo a iaculis elementum, enim orci viverra eros.</p>
+                ullamcorper, justo a iaculis elementum, enim orci viverra eros.
+              </p>
 
               <!-- Icon Blocks -->
               <div class="media align-items-start g-mb-30">
@@ -373,7 +375,8 @@
                 <div class="media-body">
                   <h3 class="h6 text-uppercase g-font-weight-800 g-color-white mb-20">Professional stuff</h3>
                   <p class="g-font-size-default g-color-gray-light-v4 mb-0">Cras sit amet varius velit. Maecenas porta condimentum tortor at
-                    sagittis. Cum sociis natoque penatibus et magnis disvarius velit</p>
+                    sagittis. Cum sociis natoque penatibus et magnis disvarius velit
+                  </p>
                 </div>
               </div>
               <!-- End Icon Blocks -->
@@ -425,7 +428,8 @@
 
               <p class="g-color-gray-light-v4 g-mb-30">Aenean lobortis ante ac porttitor eleifend. Morbi massa justo, gravida
                 sollicitudin tortor vel, dignissim viverra lectus. In varius blandit
-                condimentum. Pellentesque rutrum mauris ornare libero imperdiet pellentesque.</p>
+                condimentum. Pellentesque rutrum mauris ornare libero imperdiet pellentesque.
+              </p>
 
               <div class="row">
                 <div class="col-lg-6 g-mb-45">
@@ -1225,7 +1229,7 @@
       // initialization of google map
       function initMap() {
         $.HSCore.components.HSGMap.init('.js-g-map');
-      }∑
+      }
       // initialization of revolution slider
       var tpj = jQuery,
         promoSlider;
