--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<!--<![endif]-->
 
 	<head>
+		<!-- Title -->
 		<title>Case Consulting | Consult with Case</title>
 		<!-- Meta -->
 		<meta charset="utf-8">
