--- a/Scrubbed_Unity/index.html
+++ b/Scrubbed_Unity/index.html
@@ -196,7 +196,8 @@
                   <img class="w-100" src="./assets/custom/assets-case/img/sepia_desk.jpg" alt="Sepia Desk">
                 </div>
 
-                <div class="order-1 w-100 u-ns-bg-v1-bottom g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md">
+                <!-- Arrows u-ns-bg-v1-bottom -->
+                <div id="work-that-matters" class="order-1 w-100  g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md">
                   <h3 class="text-uppercase g-line-height-1_1 g-font-weight-800 g-font-size-25 g-font-size-30--md g-mb-20"><strong>Work that Matters</strong></h3>
                   <p class="mb-0">Case Consulting is a software services company that supports the
                     mission critical requirements of the federal government and private
@@ -208,15 +209,16 @@
               <!-- End Article -->
             </div>
 
-            <div class="col-md-4 g-parent g-theme-bg-gray-dark-v1">
+            <div class="col-md-4 g-parent g-theme-bg-gray-dark-v1 g-theme-bg-color-1">
               <!-- Article -->
               <article class="d-flex flex-wrap text-center g-color-white">
                 <div class="order-1 w-100">
                   <img class="w-100" src="./assets/custom/assets-case/img/meeting-min.jpg" alt="Meeting">
                 </div>
 
-                <div class="order-2 w-100 u-ns-bg-v1-top g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md">
+                <div class="order-2 w-100 g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md">
                   <h3 class="text-uppercase g-line-height-1_1 g-font-weight-800 g-font-size-25 g-font-size-30--md g-color-white g-mb-20">Clients that care</h3>
+                  <div class="u-heading-v2-2--top g-brd-primary"></div>
                   <p class="g-color-gray-light-v4 mb-0">We provide top-notch IT staff to Commercial and Federal Government
                     customers with experience in delivering superior system engineering
                     expertise, project management support, and application development
@@ -233,7 +235,7 @@
                   <img class="w-100" src="./assets/custom/assets-case/img/suit.jpg" alt="Image description">
                 </div>
 
-                <div class="order-1 w-100 u-ns-bg-v1-bottom g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md">
+                <div id="leaders-that-captivate" class="order-1 w-100 g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md">
                   <h3 class="text-uppercase g-line-height-1_1 g-font-weight-800 g-font-size-25 g-font-size-30--md g-mb-20"><strong>Leaders that captivate</strong></h3>
                   <p class="mb-0">Case Consulting has a well-earned reputation for quality, responsiveness
                     and absolute excellence. We take pride in our ability to fully
@@ -253,7 +255,7 @@
       <section id="services" class="g-py-100">
         <div class="container text-center g-max-width-750 g-mb-70">
           <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
-            <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">What we do</h2>
+            <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">Benefits</h2>
           </div>
 
           <p class="mb-0">Sed feugiat porttitor nunc, non dignissim ipsum vestibulum in. Donec in
