rows added in benefits

--- a/Scrubbed_Unity/index.html
+++ b/Scrubbed_Unity/index.html
@@ -258,10 +258,9 @@
             <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">Benefits</h2>
           </div>
 
-          <p class="mb-0">Sed feugiat porttitor nunc, non dignissim ipsum vestibulum in. Donec in
-            blandit dolor. Vivamus a fringilla lorem, vel faucibus ante. Nunc ullamcorper,
-            justo a iaculis elementum, enim orci viverra eros, fringilla porttitor
-            lorem eros vel</p>
+          <p class="mb-0">Case Consulting recognizes that employees are its number one asset and
+            therefore offers a salary and <a style="color: #e74c3c;" href="https://drive.google.com/file/d/0B1sDU0n_NM9NbUdtWFlxOEpydjQ/view?usp=sharing"
+              target="_blank" rel="noopener"><strong>benefits package</strong></a>            that reflect this. </p>
         </div>
 
         <div class="container">
@@ -272,16 +271,80 @@
               <div class="media">
                 <div class="d-flex g-mt-25 g-mr-40">
                   <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
-                    <i class="fas fa-user-secret"></i>
+                    <i class="fas fa-chart-line"></i>
                   </span>
                 </div>
 
                 <div class="media-body align-self-center">
-                  <h3 class="h5 text-uppercase g-font-weight-800">Criminal law</h3>
+                  <h3 class="h5 text-uppercase g-font-weight-800">Retirement</h3>
                   <p class="g-font-size-default g-color-gray-dark-v2 mb-0">Proin dignissim eget enim id aliquam. Proin ornare dictum leo,
                     non elementum tellus molestie et. Vivamus sit amet scelerisque
                     leo. In eu commodo est. Sed bibendum a metus ac sollicitudin.
                     Curabitur elementum placerat elit vel accumsan.</p>
+                </div>
+              </div>
+              <!-- End Icon Blocks -->
+            </div>
+
+            <div class="col-md-6 g-mb-40">
+              <!-- Icon Blocks -->
+              <div class="media">
+                <div class="d-flex g-mt-25 g-mr-40">
+                  <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
+                    <i class="fas fa-medkit pull-left g-theme-text-color-1"></i>
+                  </span>
+                </div>
+
+                <div class="media-body align-self-center">
+                  <h3 class="h5 text-uppercase g-font-weight-800">Health Care</h3>
+                  <ul class="list-unstyled marked-list-v1">
+                    <li>
+                      <i class="fas fa-angle-right g-absolute-centered--y g-left-0 g-font-size-5 g-color-primary"></i>                      &nbsp
+                      <p class="benefits-bullets"> Full Medical, Dental, and Vision insurance coverage (company
+                        paid premiums)</p>
+                    </li>
+                    <li data-mark="-">
+                      <p class="benefits-bullets"> Flexible Spending Account (FSA)</p>
+                    </li>
+                    <li data-mark="-">
+                      <p class="benefits-bullets"> Short Term Disability, Long Term Disability, and Life Insurance</p>
+                    </li>
+                    <li data-mark="-">
+                      <p class="benefits-bullets"> Dependent Care Account providing tax-deferred savings for child
+                        care
+                      </p>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <!-- End Icon Blocks -->
+            </div>
+          </div>
+          <!-- End Icon Blocks -->
+
+          <!-- Icon Blocks -->
+          <div class="row">
+            <div class="col-md-6 g-mb-40">
+              <!-- Icon Blocks -->
+              <div class="media">
+                <div class="d-flex g-mt-25 g-mr-40">
+                  <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
+                    <i class="fas fa-laptop pull-left"></i>
+                  </span>
+                </div>
+
+                <div class="media-body align-self-center">
+                  <h3 class="h5 text-uppercase g-font-weight-800">Technology Package</h3>
+                  <ul class="list-unstyled marked-list-v1">
+                    <li data-mark="-">
+                      <i class="fas fa-angle-right g-absolute-centered--y g-left-0 g-font-size-5 g-color-primary"></i>                      &nbsp
+                      <p class="benefits-bullets">$1,800 per calendar year towards the purchase of employee computer/tablet
+                        or other technology related device</p>
+                    </li>
+                    <li data-mark="-">
+                      <p class="benefits-bullets">Verizon 4G Mobile Wi-Fi Hotspot</p>
+                    </li>
+                  </ul>
                 </div>
               </div>
               <!-- End Icon Blocks -->
@@ -297,7 +360,7 @@
                 </div>
 
                 <div class="media-body align-self-center">
-                  <h3 class="h5 text-uppercase g-font-weight-800">Civil law</h3>
+                  <h3 class="h5 text-uppercase g-font-weight-800">Professional Development</h3>
                   <p class="g-font-size-default g-color-gray-dark-v2 mb-0">Nteger commodo est id erat bibendum, eu convallis dolor tempus.
                     Fusce mollis blandit eros. Nunc quis sapien in massa varius convallis
                     at sed justo. Praesent nec consectetur nibh, sed lobortis turpis.</p>
@@ -306,7 +369,7 @@
               <!-- End Icon Blocks -->
             </div>
           </div>
-          <!-- End Icon Blocks -->
+
 
           <!-- Icon Blocks -->
           <div class="row">
@@ -320,14 +383,13 @@
                 </div>
 
                 <div class="media-body align-self-center">
-                  <h3 class="h5 text-uppercase g-font-weight-800">Business law</h3>
+                  <h3 class="h5 text-uppercase g-font-weight-800">Referrals</h3>
                   <p class="g-font-size-default g-color-gray-dark-v2 mb-0">Aenean lobortis ante ac porttitor eleifend. Morbi massa justo,
                     gravida sollicitudin tortor vel, dignissim viverra lectus. In
                     varius blandit condimentum. Pellentesque rutrum mauris ornare
                     libero imperdiet pellentesque.</p>
                 </div>
               </div>
-              <!-- End Icon Blocks -->
             </div>
 
             <div class="col-md-6">
@@ -340,11 +402,15 @@
                 </div>
 
                 <div class="media-body align-self-center">
-                  <h3 class="h5 text-uppercase g-font-weight-800">Tax law</h3>
-                  <p class="g-font-size-default g-color-gray-dark-v2 mb-0">Nam et nulla rutrum, dignissim eros quis, dictum eros. In ullamcorper
-                    molestie neque, ac faucibus felis efficitur sed. Nam et tristique
-                    nisi. Cras iaculis venenatis libero. Suspendisse fermentum, ipsum
-                    ac facilisis elementu.</p>
+                  <h3 class="h5 text-uppercase g-font-weight-800">Time Off</h3>
+                  <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
+                    <li class="g-pos-rel g-pl-10 g-mb-15 benefits-bullets">
+                      <!--i class="fas fa-angle-right g-absolute-centered--y g-left-0 g-font-size-5 g-color-primary &nbsp"></i-->
+                      <p>
+                        33 days of leave each year (PTO, Holidays, and Training)
+                      </p>
+                    </li>
+                  </ul>
                 </div>
               </div>
               <!-- End Icon Blocks -->
