--- a/src/index.html
+++ b/src/index.html
@@ -64,12 +64,16 @@
 							<ul class="nav navbar-nav">
 								<li class="page-scroll"> <a href="#about"><span data-hover="About">About</span></a> </li>
 								<li class="page-scroll">
-									<a href="#benefits"><span data-hover="benefits">Benefits</span></a> </li>
+								<a href="#benefits"><span data-hover="benefits">Benefits</span></a> </li>
 								<li class="page-scroll"> <a href="#careers"><span data-hover="Careers">Careers</span></a> </li>
-								<li class="page-scroll"> <a href="#numbers"><span data-hover="Numbers">Numbers</span></a> </li>
-								<li class="page-scroll"> <a href="#awards"><span data-hover="Awards">Awards</span></a> </li>
-								<li class="page-scroll"> <a href="#events"><span data-hover="Events">Events</span></a> </li>
-								<li class="page-scroll"> <a href="#contact"><span data-hover="Contact">Contact</span></a> </li>
+								<li
+								  class="page-scroll"> <a href="#numbers"><span data-hover="Numbers">Numbers</span></a> </li>
+									<li
+									  class="page-scroll"> <a href="#awards"><span data-hover="Awards">Awards</span></a> </li>
+										<li
+										  class="page-scroll"> <a href="#events"><span data-hover="Events">Events</span></a> </li>
+											<li
+											  class="page-scroll"> <a href="#contact"><span data-hover="Contact">Contact</span></a> </li>
 							</ul>
 						</div>
 					</div>
@@ -86,9 +90,10 @@
 					  data-version="5.0.7">
 						<ul>
 							<!-- SLIDE  -->
-							<li data-index="rs-68" data-transition="zoomout" data-slotamount="default" data-easein="Power4.easeInOut"
-							  data-easeout="Power4.easeInOut" data-masterspeed="2000" data-thumb="assets/img-temp/promo/img1.jpg"
-							  data-rotate="0" data-saveperformance="off" data-title="Intro" data-description="">
+							<li data-index="rs-68" data-transition="zoomout" data-slotamount="default"
+							  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"
+							  data-thumb="assets/img-temp/promo/img1.jpg" data-rotate="0" data-saveperformance="off"
+							  data-title="Intro" data-description="">
 								<!-- MAIN IMAGE --><img src="Case/assets/img/developer-min.jpg" alt="" data-bgposition="50% 10%"
 								  data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg"
 								  data-no-retina>
@@ -113,8 +118,8 @@
 								  data-mask_in="x:0px;y:0px;" data-mask_out="x:inherit;y:inherit;" data-start="1000"
 								  data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; text-align: center; text-transform: uppercase;">software oriented.<br> customer focused. </div>
 								<!-- LAYER NR. 4 -->
-								<div class="tp-caption NotGeneric-SubTitle tp-resizeme rs-parallaxlevel-0" id="slide-68-layer-4"
-								  data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+								<div class="tp-caption NotGeneric-SubTitle tp-resizeme rs-parallaxlevel-0"
+								  id="slide-68-layer-4" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
 								  data-y="['middle','middle','middle','middle']" data-voffset="['52','52','28','13']"
 								  data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;"
 								  data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:1500;e:Power4.easeInOut;"
@@ -124,8 +129,8 @@
 								  style="z-index: 8; white-space: nowrap; text-align: center; text-transform: uppercase;">
 								</div>
 								<!-- LAYER NR. 5 -->
-								<div class="tp-caption NotGeneric-CallToAction rev-btn rs-parallaxlevel-0" id="slide-68-layer-7"
-								  data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+								<div class="tp-caption NotGeneric-CallToAction rev-btn rs-parallaxlevel-0"
+								  id="slide-68-layer-7" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
 								  data-y="['middle','middle','middle','middle']" data-voffset="['134','134','80','65']"
 								  data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;"
 								  data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Power1.easeInOut;" data-style_hover="c:rgba(255, 255, 255, 1.00);bc:rgba(255, 255, 255, 1.00);cursor:pointer;"
@@ -165,7 +170,7 @@
 								<p class="bar-up"> We provide top-notch IT staff to Commercial and Federal Government customers
 									with experience in delivering superior system engineering expertise, project
 									management support, and application development and design via Agile methodologies.
-								</p>
+									</p>
 							</div>
 						</div>
 						<div class="col-sm-4 g-text-color-1">
@@ -303,8 +308,7 @@
 							<li><a data-toggle="tab" href="#system-integrator">System Integrator</a></li>
 							<li><a data-toggle="tab" href="#developer">Developer</a></li>
 							<li><a data-toggle="tab" href="#system-admin">System Administrator</a></li>
-							<!--li><a data-toggle="tab" href="#internship">Internship</a></li-->
-						</ul>
+							<!--li><a data-toggle="tab" href="#internship">Internship</a></li--></ul>
 						<div class="tab-content">
 							<div id="project-manager" class="tab-pane fade in active">
 								<div class="row">
@@ -375,7 +379,7 @@
 											ability within program documents, and the overall computing environment
 											and architecture. Manages/updates the master schedule. Ensures coordination
 											and information flow occur between all programs and organizational managers.
-										</p>
+											</p>
 									</div>
 								</div>
 							</div>
@@ -447,8 +451,7 @@
 											</button>
 									</div>
 								</div>
-							</div-->
-						</div>
+							</div--></div>
 					</div>
 				</div>
 			</section>
@@ -676,7 +679,7 @@
 												<div class="">
 													<h5 class="text-uppercase"><strong><a href="https://goo.gl/photos/qNT8KHuR7HTLq3tK6" target="_blank" rel="noopener">Rogue One: A Star Wars Movie</a></strong></h5>
 													<p> The force is strong with us as we watched Rogue One at the Alamo Drafthouse.
-													</p>
+														</p>
 												</div>
 											</div>
 										</div>
