--- a/Scrubbed_Unity/index.html
+++ b/Scrubbed_Unity/index.html
@@ -54,7 +54,7 @@
                 <ul id="js-scroll-nav" class="navbar-nav text-uppercase g-font-weight-700 g-font-size-11 g-pt-20 g-pt-5--lg ml-auto">
                   <li class="nav-item g-mr-15--lg g-mb-7 g-mb-0--lg active"> <a href="#about" class="nav-link p-0">About</a> </li>
                   <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
-                  <a href="#services" class="nav-link p-0">Benefits</a> </li>
+                  <a href="#benefits" class="nav-link p-0">Benefits</a> </li>
                   <li
                     class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#whyWe" class="nav-link p-0">Careers</a> </li>
                     <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
@@ -210,7 +210,7 @@
       </section>
       </div>
       <!-- Section Content -->
-      <section id="services" class="g-py-100">
+      <section id="benefits" class="g-py-100">
         <div class="container text-center g-max-width-750 g-mb-70">
           <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
             <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">Benefits</h2> </div>
@@ -363,6 +363,112 @@
             </div>
           </div>
           <!-- End Icon Blocks -->
+        </div>
+      </section>
+      <!-- End Section Content -->
+      <!-- Section Content -->
+      <section id="careers" class="g-theme-bg-color-1 g-text-color-2 no-column-space">
+        <div class="container-fluid">
+          <div class="container g-pt-100 g-pb-30">
+            <div class="g-heading-v9 g-mb-30 text-center">
+              <h2><strong>Careers</strong></h2> </div>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item"> <a class="nav-link active" id="project-manager-tab" data-toggle="tab"
+                  href="#project-manager" role="tab" aria-controls="home" aria-selected="true">Project Manager</a>                </li>
+              <li class="nav-item"> <a class="nav-link" id="system-engineer-tab" data-toggle="tab" href="#system-engineer"
+                  role="tab" aria-controls="profile" aria-selected="false">System Engineer</a>                </li>
+              <li class="nav-item"> <a class="nav-link" id="system-integrator-tab" data-toggle="tab" href="#system-integrator"
+                  role="tab" aria-controls="contact" aria-selected="false">System Integrator</a>                </li>
+              <li class="nav-item"> <a class="nav-link" id="developer-tab" data-toggle="tab" href="#developer"
+                  role="tab" aria-controls="contact" aria-selected="false">Developer</a>                </li>
+              <li class="nav-item"> <a class="nav-link" id="system-administrator-tab" data-toggle="tab"
+                  href="#system-administrator" role="tab" aria-controls="contact" aria-selected="false">System Administrator</a>                </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+              <div class="tab-pane fade show active" id="project-manager" role="tabpanel"
+                aria-labelledby="home-tab">The Project Manager shall work with their Manager and other representatives
+                to achieve the objectives of the project they are assigned to. The
+                Project Manager is responsible for the overall management of the
+                specific project (s) and insuring that the technical solutions and
+                schedules are implemented in a timely manner. The PM is responsible
+                for all aspects of the project including cost schedules, documentation
+                preparation and customer interaction; Ensures that all control gates
+                are met on schedule; Performs organizational wide integration planning
+                and interfaces to other functional systems; ensures that the project
+                team members are fully utilized or are made available to support
+                other projects to meet the requirements.</div>
+              <div class="tab-pane fade"
+                id="system-engineer" role="tabpanel" aria-labelledby="profile-tab">System Engineers provide strategic and tactical planning and engineering
+                support for projects. Personnel are assigned to more complex development
+                tasks based on their Level of expertise. Level 1+ personnel are recognized
+                experts who are assigned to specific high risk or complex projects
+                but are also used to mentor junior personnel and provide ad-hoc support
+                to other projects when needed. Personnel lead engineering activities
+                of teams, are assigned to large complex projects, and support the
+                preparation of cost and schedule estimates. Lead engineering activities
+                for smaller less complex projects and support the preparation of
+                cost and schedule estimates for those types of projects. Support
+                engineering activities and may be responsible for all engineering
+                support for small projects. Responsible for supporting larger projects
+                under the guidance of more experienced System Engineers and may be
+                the engineering resource for simple projects or less complex tasks.
+                This category includes but is not limited to the following roles:
+                Data Architect, Help Desk, Knowledge Management Specialist, Network
+                Engineer, Quality Assurance Manager, Systems Analyst, Systems Architect,
+                Systems Engineer and Technical Consultant.</div>
+              <div class="tab-pane fade"
+                id="system-integrator" role="tabpanel" aria-labelledby="contact-tab">Provides a total systems perspective including a technical understanding
+                of relationships, dependencies and requirements of hardware and software
+                components for a project. Must be knowledgeable in computer systems
+                and gathering/identifying requirements. Must be knowledgeable in
+                life-cycle support, including maintenance, administration, and management.
+                Creates, drafts and/or reviews program documentation, generates formal
+                review documentation, and participates in system and program reviews.
+                Reviews program plans, identifies inconsistencies. Coordinates, supports
+                and participates in program meetings and reviews. Assists in the
+                evaluation of software and associated documentation. Participates
+                in formal and informal reviews to determine quality. Must be able
+                to track project studies, plans, actions items, take minutes, etc.
+                Provides frequent contact with customers, trace ability within program
+                documents, and the overall computing environment and architecture.
+                Manages/updates the master schedule. Ensures coordination and information
+                flow occur between all programs and organizational managers. </div>
+              <div class="tab-pane fade" id="developer" role="tabpanel" aria-labelledby="contact-tab">Develops, implements and tests software to meet specific project requirements.
+                Personnel are recognized experts who are assigned to specific high
+                risk or complex projects but are also used to mentor junior personnel
+                and provide ad-hoc support to other projects when needed. Lead development
+                activities of teams, are assigned to large complex projects, and
+                support the preparation of cost and schedule estimates. Lead development
+                activities for smaller less complex projects and support the preparation
+                of cost and schedule estimates for those types of projects. Support
+                development activities and may be the developer for small projects.
+                Responsible for development efforts of simple applications to small
+                less complex tasks. </div>
+              <div class="tab-pane fade" id="system-administrator"
+                role="tabpanel" aria-labelledby="contact-tab">Coordinates and/or performs the O&amp;M activities for Unix or Windows
+                servers. Develops and documents the full range of SOPs and schedules
+                for O&amp;M activities. Identifies recurring O&amp;M problems and
+                recommends steps to reduce the severity and frequency of the problems.
+                Assists application developers in testing and debugging new programs
+                to ensure compatibility with existing server technologies. Troubleshoots
+                and resolves installation problems; documents procedures for problem
+                resolution. Consults with support teams, help desks, customers, and
+                other technical staff in the resolution of server related problems.
+                Provides first tier support to storage area network and enterprise
+                storage systems. Performs server and storage capacity planning for
+                the most complex and critical systems. Recommends and implements
+                process and tool improvements to improve the efficiency and effectiveness
+                of the organization's change management and configuration management
+                processes and systems. Plans for transition of the development and/or
+                production environment to new technology. Recommends and plans server
+                recapitalization. Performs server performance tuning. Baselines and
+                forecasts server performance data and tunes server hardware and software
+                configurations. Utilizes system software to monitor the performance
+                of system files; manages system data to maintain performance efficiencies.
+                Studies system requirements to determine proper server installation
+                methods and procedures. May provide 24x7 operational support.</div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- End Section Content -->
